@@ -5,15 +5,16 @@
 MarkdownToPdf is a Java-based toolkit for converting Markdown to PDF. It consists of
 two modules:
 
-| Module | Artifact | Description |
-|--------|----------|-------------|
-| **[lib](lib/)** | `se.alipsa:md2pdf` | Core library — turn any Markdown string, file or stream into a PDF byte-array |
-| **[gui](gui/)**  | standalone desktop app | JavaFX editor with live preview, visual style editor and project management |
+| Module          | Artifact               | Description                                                                   |
+|-----------------|------------------------|-------------------------------------------------------------------------------|
+| **[lib](lib/)** | `se.alipsa:md2pdf`     | Core library — turn any Markdown string, file or stream into a PDF byte-array |
+| **[gui](gui/)** | standalone desktop app | JavaFX editor with live preview, visual style editor and project management   |
 
-The `lib` module requires **JDK 21 or later**. The GUI desktop application is shipped as
-self-contained platform archives that bundle their own Java runtime, so end users do not
+The `lib` module requires **JDK 21 or later**. Building the GUI requires **JDK 25 or later**.
+The GUI desktop application is shipped as
+self-contained platform archives that bundle their own Java 25 runtime, so end users do not
 need a JDK installed. A separate `-no-jdk` archive is available for users who already have
-a JavaFX-bundled JDK 21+ and prefer a smaller download.
+a JavaFX-bundled JDK 25+ and prefer a smaller download.
 
 The library's rendering pipeline is:
 **commonmark-java** (Markdown → HTML) → **jsoup** (HTML → well-formed XHTML) →
@@ -52,12 +53,12 @@ The installer checks for these and reports what is missing, but cannot install t
 
 ### Downloads
 
-| Download | Install | Size |
-|---|---|---|
-| `md2pdf-<version>-linux-x64.zip` | unzip, then `bash md2pdf-install.sh` | ~100 MB |
-| `md2pdf-<version>-macos-aarch64.zip` | unzip, then `zsh md2pdf-install.zsh` | ~100 MB |
-| `md2pdf-<version>-windows-x64.zip` | unzip, then double-click `md2pdf-install.cmd` | ~100 MB |
-| `md2pdf-<version>-no-jdk.zip` | unzip, then `java -jar MarkdownToPdf.jar` (needs a JavaFX-bundled JDK 21+) | ~15 MB |
+| Download                             | Install                                                                    | Size    |
+|--------------------------------------|----------------------------------------------------------------------------|---------|
+| `md2pdf-<version>-linux-x64.zip`     | unzip, then `bash md2pdf-install.sh`                                       | ~100 MB |
+| `md2pdf-<version>-macos-aarch64.zip` | unzip, then `zsh md2pdf-install.zsh`                                       | ~100 MB |
+| `md2pdf-<version>-windows-x64.zip`   | unzip, then double-click `md2pdf-install.cmd`                              | ~100 MB |
+| `md2pdf-<version>-no-jdk.zip`        | unzip, then `java --enable-native-access=javafx.graphics,javafx.web,javafx.media -jar MarkdownToPdf.jar` (needs a JavaFX-bundled JDK 25+) | ~15 MB  |
 
 Verify a download against `SHA256SUMS` from the same release:
 
